<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarAdd"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu_save"
            app:navigationIcon="@drawable/ic_arrow_back">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes"
                android:textSize="@dimen/sp_20" />
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:background="@null"
        android:ellipsize="end"
        android:ems="10"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:text=""
        android:textSize="@dimen/sp_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout4" />

    <TextView
        android:id="@+id/currentDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_14"
        android:text="@string/_09_00"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/comment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_14"
        android:background="@null"
        android:ems="10"
        android:hint="@string/comment"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text=""
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="@+id/currentDate"
        app:layout_constraintStart_toStartOf="@+id/currentDate"
        app:layout_constraintTop_toBottomOf="@+id/currentDate" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_14"
        android:background="@null"
        android:ems="10"
        android:hint="@string/note_something_down_here"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text=""
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="@+id/currentDate"
        app:layout_constraintStart_toStartOf="@+id/currentDate"
        app:layout_constraintTop_toBottomOf="@+id/comment" />
</androidx.constraintlayout.widget.ConstraintLayout>